assets/scss/style.scss
/* ... */
/* ===[End Header]=== */

/* ===[Start Mobile Header]=== */
@media (max-width: 1024px) {
  header {
    .top-header {
      padding: 0.5rem 0;

      .top-header-helper {
        .header-logo {
          img {
            max-width: 154px;
          }
        }
      }

      .burger-btn {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 65px;
        padding: 0.75rem 1rem;
        width: 80px;
        cursor: pointer;

        @media (max-width: 1024px) {
          height: 35px;
          width: 40px;
          padding: 0.25rem;
        }

        .dashes-container {
          position: relative;
          display: flex;
          justify-content: center;
          align-items: center;
          flex-direction: column;
          width: 100%;
          height: 100%;
          gap: 0.75rem;
          grid-gap: 0.75rem;
          pointer-events: none;

          @media (max-width: 1024px) {
            gap: 0.25rem;
            grid-gap: 0.25rem;
          }

          .dash {
            position: absolute;
            left: 50%;
            transform: translateX(-50%);
            width: 95%;
            height: 4px;
            background: $primary-color;
            transition: $general-transition;

            &:first-of-type {
              top: 0;
            }

            &:last-of-type {
              bottom: 0;
            }
          }
        }

        &.active {
          .dash {
            left: 50%;

            &:nth-child(2) {
              opacity: 0;
            }

            &:first-of-type {
              transform: translate(-50%, -50%) rotate(-45deg);
              top: 50%;
            }

            &:last-of-type {
              transform: translate(-50%, 50%) rotate(45deg);
              bottom: 50%;
            }
          }
        }
      }
    }

    .bottom-header {
      display: flex;
      align-items: baseline;
      height: 60svh;
      overflow-y: auto;
      background: $light-color;
      padding: 1rem 0;
      box-shadow: none;
      backdrop-filter: blur(0);
      transition: $general-transition;
      transform: translateY(-100%);
      opacity: 0;
      border-radius: 0 0 20px 20px;

      &.active-nav {
        opacity: 1;
        transform: translateY(0);
      }

      .container {
        height: 100%;
      }

      .bottom-header-helper {
        display: flex;
        flex-direction: column;
        height: 100%;
      }

      nav {
        margin-bottom: 1rem;

        ul.menu {
          flex-direction: column;

          .menu-item {
            position: relative;

            .sub-menu {
              z-index: 3;
              border: 1px solid #eee;

              // Level 2
              & .menu-item-has-children {
                position: relative;

                &>.sub-menu {
                  left: 0;
                  top: 100%;
                  width: 100%;
                }
              }
            }
          }
        }
      }

      .mobile-header-cta {
        .donation-button-holder {
          flex-grow: 1;

          a {
            width: 100%;
          }
        }
      }
    }
  }
}
/* ... */

